--- a/.github/workflows/github_lab1_pytest_action.yml
+++ b/.github/workflows/github_lab1_pytest_action.yml
@@ -29,10 +29,10 @@ jobs:
         python-version: 3.8
 
     - name: Install dependencies
-      run: pip install -r requirements.txt
+      run: pip install -r Lab1/requirements.txt
 
     - name: Run tests and generate XML report
-      run: pytest --junitxml=pytest-report.xml
+      run: PYTHONPATH=Lab1 pytest Lab1/test/ --junitxml=pytest-report.xml
       continue-on-error: false
 
     - name: Upload test results
